@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.0 ]---------------
 
+2004-11-03  Erik Grinaker <erikg@codepoet.no>
+
+	* rewrote the FPM data handler
+
 2004-10-30  Erik Grinaker <erikg@codepoet.no>
 
 	* rewrote the Revelation and RevelationXML data handlers
